# PHY607-Project2

./: Particles.py  Proposal.txt  Pseudocode.txt  README.md  experiment-vectorized.py  experiment.py  experiment_vectorized.py  main.py  main_vectorization.py  particle.py  pyproject.toml  sampling.py
thermobox/: Particles.py  __init__.py  benchmarking.py  experiment.py  experiment_vectorized.py  main.py  main_vectorization.py  particle.py  sampling.py
